# collision2

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml
shaders/: circle.wgsl  shape.wgsl
src/: aabb.rs  aabb_renderer.rs  bvh.rs  bvh_builder.rs  circle_renderer.rs  gpu_arena.rs  gpu_buffer.rs  integration.rs  main.rs  mock_bvh_test.rs  objects.rs  pass_duration.rs  scene.rs  shader.wgsl  shaders.rs  shape_renderer.rs  shape_shaders.rs  util.rs  wgpu_buffer.rs
src/shaders/: aabb_frame.wgsl  bvh.wgsl  bvh_init.wgsl  common.wgsl  integration.wgsl  shape.wgsl
wgsl_bindgen-v0.21.2/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
wgsl_bindgen-v0.21.2/src/generate/bind_group/: single_bind_group.rs
