[package]
name = "wgpu_particles"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
winit = "0.30.12"
env_logger = "0.11.8"
log = "0.4.29"
wgpu = "27.0.0"
pollster = "0.4.0"
bytemuck = "1.24.0"
nalgebra = "0.34.1"
itertools = "0.14.0"
rand = "0.9.2"

[build-dependencies]
wgsl_bindgen = "0.21.2"
